--- a/main/templates/main/product_detail.html
+++ b/main/templates/main/product_detail.html
@@ -5,7 +5,7 @@
     <!-- Breadcrumb -->
     <div class="mb-6 text-sm text-gray-500">
         <a hx-get="{% url 'main:index' %}" hx-target="#main-content" hx-push-url="true" 
-           class="hover:text-black">HOME</a>
+           class="hover:text-black">Главная</a>
         <span class="mx-2">/</span>
         <a hx-get="{% url 'main:catalog' product.category.slug %}" hx-target="#main-content" hx-push-url="true"
            class="hover:text-black">{{ product.category.name|upper }}</a>
@@ -62,6 +62,8 @@
                     hx-target="#main-cart-modal" 
                     hx-swap="innerHTML"
                     class="w-full">
+
+                    {% csrf_token %} 
 
                     <input type="hidden" name="quantity" value="1">
 
