--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -58,6 +58,13 @@
                     0
                 </span>
             </button>
+            <a href="{% url 'users:profile' %}" 
+                hx-get="{% url 'users:profile' %}" 
+                hx-target="#main-content" 
+                hx-push-url="true"
+                class="text-sm font-medium text-gray-900 uppercase hover:text-gray-600 ml-4">
+                    ACCOUNT
+                </a>
         </div>
     </div>
 </header>
