--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,4 +1,14 @@
 {% block content %}
+
+{% if form.non_field_errors %}
+    <div class="mb-4 text-red-500 text-sm text-center">
+        {% for error in form.non_field_errors %}
+            {{ error }}
+        {% endfor %}
+    </div>
+{% endif %}
+
+
 <style>
     .dotted-input {
         border: none;
@@ -19,7 +29,7 @@
 <div class="min-h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
         <h1 class="text-2xl font-bold text-gray-900 mb-8 text-center tracking-wide">
-            LOG IN
+            ВХОД
         </h1>
         
         {% if messages %}
@@ -31,8 +41,8 @@
         {% endif %}
         
         <form id="loginForm" method="post" class="space-y-6" 
-              hx-post="{% url 'users:login' %}" 
-              hx-target="#main-content">
+            hx-post="{% url 'users:login' %}" 
+            hx-target="#main-content"> 
             {% csrf_token %}
             
             <div>
@@ -54,7 +64,7 @@
                     type="submit"
                     class="bg-black hover:bg-gray-500 text-white font-semibold py-3 px-6 transition-colors duration-200 text-sm tracking-wide"
                 >
-                    LOG IN
+                    ВОЙТИ
                 </button>
                 <a 
                     href="{% url 'users:register' %}"
@@ -63,7 +73,7 @@
                     hx-push-url="true"
                     class="border-2 border-gray-300 hover:border-gray-400 text-gray-700 hover:text-gray-900 font-semibold py-3 px-6 transition-colors duration-200 text-sm tracking-wide text-center"
                 >
-                    CREATE AN ACCOUNT
+                    СОЗДАТЬ АККАУНТ
                 </a>
             </div>
         </form>
@@ -81,3 +91,4 @@
     });
 </script>
 {% endblock %}
+
