исправил баги, сделал страницу после оформления заказа

--- a/users/templates/users/profile_content.html
+++ b/users/templates/users/profile_content.html
@@ -22,7 +22,7 @@
     <div class="max-w-6xl mx-auto">
 
         <h1 class="text-3xl font-bold text-gray-900 mb-8 text-center tracking-wide">
-            Привет, {{ request.user.first_name|upper }} {{ request.user.last_name|upper }}
+            Привет, {{ request.user.first_name }} {{ request.user.last_name }}
         </h1>
 
         {% if messages %}
