--- a/users/templates/users/profile_content.html
+++ b/users/templates/users/profile_content.html
@@ -55,8 +55,12 @@
 
                         <li class="nav-item">
                             <a
-                                href="#"
-                                class="flex items-center text-gray-700 font-semibold text-sm tracking-wide hover:text-gray-900">
+                                href="{% url 'orders:order_history' %}"
+                                hx-get="{% url 'orders:order_history' %}"
+                                hx-target="#main-content"
+                                hx-push-url="true"
+                                class="flex items-center text-gray-700 font-semibold text-sm tracking-wide hover:text-gray-900"
+                            >
                                 История заказов
                             </a>
                         </li>
