--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Мой Магазин{% endblock %}</title>
+    <title>{% block title %}DriftWood{% endblock %}</title>
+    <link rel="icon" type="image/png" href="{% static 'main/favicon1.png' %}">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
