--- a/main/templates/main/product_detail.html
+++ b/main/templates/main/product_detail.html
@@ -82,12 +82,12 @@
             <!-- Info blocks (your custom fields) -->
             <div class="components grid grid-cols-1 sm:grid-cols-2 gap-y-4 border-t pt-6">
 
-                {% if product.created_at %}
+                {% comment %} {% if product.created_at %}
                 <div>
                     <h4 class="font-medium text-sm">Created:</h4>
                     <p class="text-gray-700">{{ product.created_at|date:"F d, Y" }}</p>
                 </div>
-                {% endif %}
+                {% endif %} {% endcomment %}
 
                 {% if product.size %}
                 <div>
