Добавил HTML яндекс метрику, скорректировал UI корзины, добавил характеристик в модели product

--- a/cart/templates/cart/cart_modal.html
+++ b/cart/templates/cart/cart_modal.html
@@ -82,7 +82,7 @@
         </div>
 
         <!-- Итого -->
-        <div id="cart-summary" class="border-t pt-4 mb-4">
+        <div id="cart-summary" >
             <div class="flex justify-between items-center mb-2">
                 <span class="text-gray-600">Количество товаров:</span>
                 <span class="font-medium">{{ cart.total_items }}</span>
