--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,6 +1,6 @@
 {% extends "main/base.html" %}
 
-{% block title %}about{% endblock %}
+{% block title %}О нас{% endblock %}
 
 {% block main_content %}
     {% include "main/about_content.html" %}
